--- a/non-cloud.yml
+++ b/non-cloud.yml
@@ -35,6 +35,11 @@
     default: "y"
     private: no
 
+  - name: "security_enabled"
+    prompt: "Do you want to enable the security role? (y/n):\n"
+    default: "y"
+    private: no
+
   - name: "easyrsa_p12_export_password"
     prompt: "Enter a password for p12 certificates and SSH private keys: (minimum five characters)\n"
     default: "vpnpw"
@@ -54,6 +59,7 @@
         dns_enabled: "{{ dns_enabled }}"
         proxy_enabled: "{{ proxy_enabled }}"
         ssh_tunneling_enabled: "{{ ssh_tunneling_enabled }}"
+        security_enabled: "{{ security_enabled }}"
         auditd_enabled: " {{ auditd_enabled }}"
         easyrsa_p12_export_password: "{{ easyrsa_p12_export_password }}"
         IP_subject: "{{ IP_subject }}"
@@ -75,7 +81,7 @@
 
   roles:
     - common
-    - security
+    - { role: security, when: security_enabled is defined and security_enabled == "y" }
     - { role: proxy, when: proxy_enabled is defined and proxy_enabled == "y" }
     - { role: dns_adblocking , when: dns_enabled is defined and dns_enabled == "y" }
     - { role: logging, when: auditd_enabled is defined and auditd_enabled == "y" }
