--- a/roles/ssh_tunneling/tasks/main.yml
+++ b/roles/ssh_tunneling/tasks/main.yml
@@ -1,5 +1,19 @@
 ---
 
+- name: Ensure that the sshd_config file has desired options
+  blockinfile:
+    dest: /etc/ssh/sshd_config
+    marker: '# ANSIBLE_MANAGED_ssh_tunneling_role'
+    block: |
+      Match Group algo
+          AllowTcpForwarding remote
+          AllowAgentForwarding no
+          AllowStreamLocalForwarding no
+          PermitTunnel no
+          X11Forwarding no
+  notify:
+    - restart ssh
+
 - name: Ensure that the algo group exist
   group: name=algo state=present
 
