--- a/config.cfg
+++ b/config.cfg
@@ -13,6 +13,8 @@ auditd_action_mail_acct: email@example.com
 easyrsa_dir: /opt/easy-rsa-ipsec
 easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
+easyrsa_p12_export_password: vpnpws
+
 
 # If True re-init all existing certificates. (True or False)
 easyrsa_reinit_existent: False
