--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -15,7 +15,7 @@
     state: present
     command: droplet
     name: "{{ do_server_name }}"
-    region_id: "{{ regions[do_region] }}"
+    region_id: "{{ do_region }}"
     size_id: "512mb"
     image_id: "ubuntu-16-04-x64"
     ssh_key_ids: "{{ do_ssh_key.ssh_key.id }}"
@@ -31,11 +31,6 @@
     ansible_python_interpreter: "/usr/bin/python2.7"
     do_access_token: "{{ do_access_token }}"
     do_droplet_id: "{{ do.droplet.id }}"
-    dns_enabled: "{{ dns_enabled }}"
-    proxy_enabled: "{{ proxy_enabled }}"
-    ssh_tunneling_enabled: "{{ ssh_tunneling_enabled }}"
-    security_enabled: "{{ security_enabled }}"
-    auditd_enabled: " {{ auditd_enabled }}"
     easyrsa_p12_export_password: "{{ easyrsa_p12_export_password }}"
     cloud_provider: digitalocean
     ipv6_support: yes
