--- a/roles/vpn/handlers/main.yml
+++ b/roles/vpn/handlers/main.yml
@@ -6,6 +6,9 @@
 
 - name: restart apparmor
   service: name=apparmor state=restarted
+  
+- name: save iptables
+  shell: service netfilter-persistent save
 
 - name: congrats
   debug:
