--- a/deploy.yml
+++ b/deploy.yml
@@ -20,11 +20,11 @@
   pre_tasks:  
     - name: Common pre-tasks
       include: playbooks/common.yml
-      tags: [ 'digitalocean', 'ec2', 'gce' ]
+      tags: [ 'digitalocean', 'ec2', 'gce', 'pre' ]
       
     - name: DigitalOcean pre-tasks
       include: playbooks/digitalocean.yml
-      tags: [ 'digitalocean', 'ec2', 'gce' ]
+      tags: [ 'digitalocean' ]
 
   roles:
     - { role: security, tags: [ 'security' ] }
@@ -32,8 +32,7 @@
     - { role: dns_adblocking, tags: ['dns', 'adblock' ] }
     - { role: logging, tags: [ 'logging' ] }
     - { role: ssh_tunneling, tags: [ 'ssh_tunneling' ] }
-    - { role: vpn, tags: [ 'vpn' ] }    
-   
+    - { role: vpn, tags: [ 'vpn' ] }   
 
   handlers:
     - name: reload eth0
