Disable unneeded plugins in StrongSwan #84

--- a/config.cfg
+++ b/config.cfg
@@ -28,12 +28,32 @@ IP_subject_alt_name: "{{ ansible_ssh_host }}"
 # Enable this variable if you want to use a local DNS resolver to block ads while surfing. (True or False)
 service_dns: True
 
-# If you don't want to use a local DNS resolver (option `service_dns`) you need to define DNS servers in this list. 
+# If you don't want to use a local DNS resolver (option `service_dns`) you need to define DNS servers in this list.
 dns_servers:
   - 8.8.8.8
   - 8.8.4.4
   - 2001:4860:4860::8888
   - 2001:4860:4860::8844
+
+strongswan_enabled_plugins:
+  - aes
+  - gcm
+  - hmac
+  - kernel-netlink
+  - nonce
+  - openssl
+  - pem
+  - pgp
+  - pkcs12
+  - pkcs7
+  - pkcs8
+  - pubkey
+  - random
+  - revocation
+  - sha2
+  - socket-default
+  - stroke
+  - x509
 
 # IP address for the proxy and the local dns resolver
 local_service_ip: 172.16.0.1
