Initial commit of reorg'd docs

--- a/config.cfg
+++ b/config.cfg
@@ -5,7 +5,7 @@ users:
   - dan
   - jack
 
-# If you're using auditd for monitoring, add an email address to send logs
+# Add an email address to send logs if you're using auditd for monitoring, 
 auditd_action_mail_acct: email@example.com
 
 ### Advanced users only below this line ###
@@ -14,7 +14,6 @@ easyrsa_dir: /opt/easy-rsa-ipsec
 easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
 easyrsa_p12_export_password: vpnpws
-
 
 # If True re-init all existing certificates. (True or False)
 easyrsa_reinit_existent: False
