iptables moved to the vpn role #61

--- a/roles/vpn/handlers/main.yml
+++ b/roles/vpn/handlers/main.yml
@@ -6,12 +6,12 @@
 
 - name: restart apparmor
   service: name=apparmor state=restarted
-  
-- name: save iptables
-  shell: service netfilter-persistent save
 
 - name: save iptables
   shell: service netfilter-persistent save
+
+- name: restart iptables
+  service: name=netfilter-persistent state=restarted
 
 - name: congrats
   debug:
