EC2 | Add VPC group #98 and counts #59

--- a/config.cfg
+++ b/config.cfg
@@ -65,5 +65,9 @@ ipsec_config:
   compress: 'yes'
   fragmentation: 'yes'
 
+ec2_vpc_nets:
+  cidr_block: 172.251.0.0/23
+  subnet_cidr: 172.251.1.0/24
+
 # IP address for the proxy and the local dns resolver
 local_service_ip: 172.16.0.1
