better user instructions

--- a/config.cfg
+++ b/config.cfg
@@ -8,12 +8,15 @@ users:
 # Add an email address to send logs if you're using auditd for monitoring, 
 auditd_action_mail_acct: email@example.com
 
+# Exported certificates will be protected by the password below:
+easyrsa_p12_export_password: vpnpws
+
+
 ### Advanced users only below this line ###
 
 easyrsa_dir: /opt/easy-rsa-ipsec
 easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
-easyrsa_p12_export_password: vpnpws
 
 # If True re-init all existing certificates. (True or False)
 easyrsa_reinit_existent: False
