--- a/roles/vpn/handlers/main.yml
+++ b/roles/vpn/handlers/main.yml
@@ -20,7 +20,7 @@
       - "#                          Congratulations!                            #"
       - "#                     Your Algo server is running.                     #"
       - "#    Config files and certificates are in the ./configs/ directory.    #"
-      - "#          Go to https://www.dnsleaktest.com/ after connecting         #"
+      - "#              Go to https://whoer.net/ after connecting               #"
       - "#        and ensure that all your traffic passes through the VPN.      #"
       - "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}"
       - "#----------------------------------------------------------------------#"
