--- a/deploy.yml
+++ b/deploy.yml
@@ -38,3 +38,18 @@
   handlers:
     - name: reload eth0
       shell: sh -c 'ifdown eth0; ip addr flush dev eth0; ifup eth0'
+
+  post_tasks:
+    - shell: |
+        echo "#----------------------------------------------------------------------#"
+        echo "#                          Congratulations!                            #"
+        echo "#                     Your Algo server is running.                     #"
+        echo "#    Config files and certificates are in the ./configs/ directory.    #"
+        echo "#              Go to https://whoer.net/ after connecting               #"
+        echo "#        and ensure that all your traffic passes through the VPN.      #"
+        echo "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}"
+        echo "#----------------------------------------------------------------------#"
+      tags: always
+      register: congrats
+    - debug: msg="{{ congrats.stdout_lines }}"
+      tags: always
