--- a/config.cfg
+++ b/config.cfg
@@ -64,3 +64,7 @@ ipsec_config:
 
 # IP address for the proxy and the local dns resolver
 local_service_ip: 172.16.0.1
+
+pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
+VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
+CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
