--- a/deploy.yml
+++ b/deploy.yml
@@ -8,6 +8,7 @@
     - { role: cloud-digitalocean, tags: ['digitalocean'] }
     - { role: cloud-ec2, tags: ['ec2'] }
     - { role: cloud-gce, tags: ['gce'] }
+    - { role: cloud-azure, tags: ['azure'] }
     - { role: local, tags: ['local'] }
 
 - name: Post-provisioning tasks
@@ -21,7 +22,7 @@
   pre_tasks:
     - name: Common pre-tasks
       include: playbooks/common.yml
-      tags: [ 'digitalocean', 'ec2', 'gce', 'pre' ]
+      tags: [ 'digitalocean', 'ec2', 'gce', 'azure', 'pre' ]
 
     - name: DigitalOcean pre-tasks
       include: playbooks/digitalocean.yml
