--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -3,3 +3,5 @@
 
 - name: Configure defaults
   raw: sudo update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1
+  tags:
+    - update-alternatives
