--- a/config.cfg
+++ b/config.cfg
@@ -29,10 +29,12 @@ server_name: "{{ ansible_ssh_host }}"
 IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
 dns_servers:
-  - 8.8.8.8
-  - 8.8.4.4
-  - 2001:4860:4860::8888
-  - 2001:4860:4860::8844
+  ipv4:
+    - 8.8.8.8
+    - 8.8.4.4
+  ipv6:
+    - 2001:4860:4860::8888
+    - 2001:4860:4860::8844
 
 strongswan_enabled_plugins:
   - aes
