--- a/config.cfg
+++ b/config.cfg
@@ -78,3 +78,8 @@ congrats: |
   "#                     The p12 password is {{ easyrsa_p12_export_password }}      "
   "#                  The CA key password is {{ easyrsa_CA_password }}      "
   "#----------------------------------------------------------------------#"
+
+SSH_keys:
+  comment: algo@ssh
+  private: configs/algo.pem
+  public: configs/algo.pem.pub
