--- a/config.cfg
+++ b/config.cfg
@@ -73,3 +73,8 @@ congrats: |
   "#          Local DNS resolver and Proxy IP address: {{ local_service_ip }}"
   "#                     The p12 password is {{ easyrsa_p12_export_password }}"
   "#----------------------------------------------------------------------#"
+
+SSH_keys:
+  comment: algo@ssh
+  private: configs/algo.pem
+  public: configs/algo.pem.pub
