--- a/roles/cloud-ec2/tasks/main.yml
+++ b/roles/cloud-ec2/tasks/main.yml
@@ -106,9 +106,9 @@
     easyrsa_p12_export_password: "{{ easyrsa_p12_export_password }}"
     cloud_provider: ec2
     ipv6_support: no
-  with_items: "{{ ec2.instances }}"
+  with_items: "{{ ec2.tagged_instances }}"
 
 - name: Wait for SSH to become available
   local_action: "wait_for port=22 host={{ item.public_dns_name }} timeout=320"
-  with_items: "{{ ec2.instances }}"
+  with_items: "{{ ec2.tagged_instances }}"
   become: false
