--- a/roles/ssh_tunneling/tasks/main.yml
+++ b/roles/ssh_tunneling/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- set_fact:
+    IP_subject_alt_name: "{{ IP_subject_alt_name }}"
+
 - name: Ensure that the sshd_config file has desired options
   blockinfile:
     dest: /etc/ssh/sshd_config
