ipv6 option is available in ansible 2.2; Fixed #158

--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -21,6 +21,7 @@
     ssh_key_ids: "{{ do_ssh_key.ssh_key.id }}"
     unique_name: yes
     api_token: "{{ do_access_token }}"
+    ipv6: yes
   register: do
 
 - name: Add the droplet to an inventory group
